Refactor: Separate shipping address and user's address
