# openapi.yaml
@@ -1360,7 +1360,26 @@ paths:
                     type: object
                     properties:
                       shippingAddress:
-                        $ref: '#/components/schemas/address'
+                        type: object
+                        properties:
+                          shippingAddressID:
+                            type: string
+                            example: '1'
+                          phoneNumber:
+                            type: string
+                            example: 0123456789
+                          recipientName:
+                            type: string
+                            example: John Doe
+                          address:
+                            type: string
+                            example: 123 Bui Huu Nghia
+                          city:
+                            type: string
+                            example: Bien Hoa City
+                          district:
+                            type: string
+                            example: Dong Nai
                     allOf:
                       - $ref: '#/paths/~1cart/post/responses/200/content/application~1json/schema/properties/order'
         '401':
